Start implementing create account
Fix swagger docs and regenerate.
