# api/internal/server/service.go
@@ -10,11 +10,8 @@ import (
 	"nathan.dev/consent/internal/domain/user"
 	"nathan.dev/consent/internal/server/context"
 	"nathan.dev/consent/internal/server/controllers"
-	_ "nathan.dev/consent/internal/server/docs" // Import docs generated by Swag CLI
 	"nathan.dev/consent/internal/storage"
 )
-
-// Generate docs with `swag init --parseDependency --parseInternal --parseDepth 1`
 
 type Service struct {
 	engine    *gin.Engine
@@ -50,6 +47,7 @@ func (s *Service) configureRoutes() {
 		account := v1.Group("/account")
 		{
 			account.GET(":id", s.container.userController.GetAccount)
+			account.POST("", s.container.userController.CreateAccount)
 		}
 
 		Organization := v1.Group("/organization")
